Bug 1003902: Drop 'const' qualifier from arg in EscapeStringForLIKE() function-decl to make it match the IDL-generated decl. r=mak